title padding fix on mobile

--- a/chair-band/src/styles/page.module.scss
+++ b/chair-band/src/styles/page.module.scss
@@ -165,7 +165,6 @@
     align-items: center;
 
     margin-left: 0;
-    padding-top: 100px;
   }
 
   .text_div {
@@ -181,7 +180,7 @@
     align-items: center;
     justify-content: space-between;
 
-    margin-top: 10%;
+    height: 70vh;
     padding-top: 0;
     padding-right: 10%;
     padding-left: 10%;
@@ -213,6 +212,10 @@
 
     margin-top: 10%;
 
+    .title {
+      padding-top: 100px;
+    }
+
     .imgcont {
       border-radius: 0px;
       position: relative;
@@ -230,6 +233,11 @@
   }
 
   .shows_div {
+
+    .title {
+      padding-top: 100px;
+    }
+    
     .imgcont {
       position: relative;
       width: 110%;
